# rake

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  dune  dune-project  flake.nix  rake.opam  shell.nix
test/: README.md  aarch64_neon_asm_test.ml  aarch64_neon_isel_test.ml  aarch64_neon_regalloc_test.ml  capability_evidence.tsv  check_capability_evidence.sh  conformance_test.sh  dune  field_access.rk  full_tests.sh  harness.c  layout_test.ml  manifest.tsv  native_backend_test.sh  native_expected.ml  native_ir_test.ml  native_lower_test.ml  native_optimize_test.ml  native_semantics_test.ml  native_toolchain_test.ml  native_verify_test.ml  neon_backend_test.sh  neon_expected.ml  neon_harness.c  over_loop.rk  parser_differential.sh  rake_with_tines.rk  run_tests.sh  simple_crunch.rk  target_profile_test.sh  x86_avx2_asm_test.ml  x86_avx2_isel_test.ml  x86_avx2_regalloc_test.ml
test/frontend/: byte_domain.rk  docs_pack_over.rk  docs_safe_root.rk  masked_partial_ops.rk  mixed_storage_widen.rk  over_loop.rk  predicated_select.rk  rake_with_tines.rk  supported_run_int.rk  supported_run_int64.rk  sweep_overlap_priority.rk
test/native/: add.rk  capability_fused.rk  contracted_fma.rk  docs_crunch.rk  fused_contract.rk  fused_fma.rk  identity.rk  predication.rk  reductions_scans.rk  scalar_parameter.rk  select.rk  simple_crunch.rk  supported_float_rack.rk
test/parser/: manifest.tsv
test/reject/: fma_requires_float_racks.rk  fused_annotation_mismatch.rk  fused_reduction.rk  fused_user_call.rk  masked_cross_lane.rk  masked_modulo.rk  masked_user_call.rk  (+7 more)
(+105 files in other folders)
